day4/prod/cimple-back-all.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cimple-back-deployment
  namespace: prod
  labels:
    app: cimple-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cimple-back
  template:
    metadata:
      name: cimple-back
      labels:
        app: cimple-back
    spec:
      volumes:
        - name: config-data
          emptyDir: {}
        - name: logs
          emptyDir: {}
      containers:
        - name: cimple-back
          image: taksan/cimple-back:v1
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: logs
              mountPath: /app/logs
          startupProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 30
            periodSeconds: 10
        - name: cimple-eviewer-collector
          image: taksan/cimple-eviewer-collector:v1
          volumeMounts:
            - name: config-data
              mountPath: /opt/
            - name: logs
              mountPath: /app/logs
---
apiVersion: v1
kind: Service
metadata:
  name: cimple-back
  namespace: prod
spec:
  type: LoadBalancer
  selector:
    app: cimple-back
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cimple-back
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - host: back.prod.cimple.bootcamp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cimple-back
                port:
                  number: 80
