day4/prod/cimple-back-ingress-prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cimple-back
spec:
  ingressClassName: nginx
  rules:
    - host: back.prod.cimple.bootcamp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cimple-back
                port:
                  number: 80
