day4/prod/cimple-front-all.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cimple-front-deployment
  labels:
    app: cimple-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cimple-front
  template:
    metadata:
      name: cimple-front
      labels:
        app: cimple-front
    spec:
      containers:
      - name: cimple-front
        image: taksan/cimple-front:v2
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: cimple-front
spec:
  selector:
    app: cimple-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cimple-front
spec:
  ingressClassName: nginx
  rules:
    - host: front.prod.cimple.bootcamp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cimple-front
                port:
                  number: 80
