day4/prod/cimple-front-ingress-dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cimple-front
spec:
  ingressClassName: nginx
  rules:
    - host: front.prod.cimple.bootcamp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cimple-front
                port:
                  number: 80
